Fix compile issues and improve test